--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<img src="https://i.imghippo.com/files/bRh8819Y.jpg" alt="" border="0">
 		</div>
 
-			<p>Будущий тестировщий ,но это не точно</p>
+			<p>Будущий тестировщий ,и это 100%)</p>
 
 			<h2>Обо мне</h2>
 
